--- a/package.json
+++ b/package.json
@@ -10,9 +10,18 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-router-dom": "^5.1.5",
+    "@types/react-sidebar": "^3.0.0",
+    "antd": "^4.5.2",
+    "axios": "^0.19.2",
+    "potter-nf": "^0.0.9",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-sidebar": "^3.0.2",
+    "react-simple-sidenav": "^2.0.0",
+    "recharts": "^1.8.5",
     "typescript": "~3.7.2"
   },
   "scripts": {
