--- a/package.json
+++ b/package.json
@@ -25,10 +25,8 @@
     "typescript": "~3.7.2"
   },
   "scripts": {
-    "dev": "react-scripts start",
-    "start": "serve -s build",
+    "start": "react-scripts start",
     "build": "react-scripts build",
-    "serve": "serve -s build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
