--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-sidebar": "^3.0.0",
     "antd": "^4.5.2",
     "axios": "^0.19.2",
+    "express": "^4.17.1",
     "potter-nf": "^0.0.9",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -25,7 +26,8 @@
     "typescript": "~3.7.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server/server.js",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
