--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "typescript": "~3.7.2"
   },
   "scripts": {
-    "start": "node server/server.js",
+    "start": "node server.js",
     "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
