--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "react-sidebar": "^3.0.2",
     "react-simple-sidenav": "^2.0.0",
     "recharts": "^1.8.5",
+    "serve": "^11.3.2",
     "typescript": "~3.7.2"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "serve -s build",
     "dev": "react-scripts start",
     "build": "react-scripts build",
+    "serve": "serve -s build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
